# SMP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/CryptGMM/: CowPtr.hpp  DoublePacking.hpp  EncVec.hpp  GMMController.hpp  HElib.hpp  Matrix.hpp  SMPServer.hpp  Tensor.hpp  Timer.hpp  config.h  literal.hpp
include/CryptGMM/internal/: DoublePacking.hpp
include/CryptGMM/network/: client.hpp  net_io.hpp
include/SMP/: DoublePacking.hpp  HElib.hpp  Matrix.hpp  SMPServer.hpp  literal.hpp
include/SMP/network/: ConcurrentQueue.hpp  net_io.hpp
src/: BenchmarkGMM.cpp  CMakeLists.txt  DoublePacking.cpp  FBPacking.cpp  FindParams.cpp  GMM-2.cpp  GMM.cpp  GetCtxtSize.cpp  HElib.cpp  Matrix.cpp  MiniONN.cpp  SMP.cpp  SMPServer.cpp  SMP_local.cpp  fast_decryption.cpp  faster_unpacking.cpp  literal.cpp  net_io.cpp
src/DGK/: .ben_dgk_mt.cpp.swp  CMakeLists.txt  ben_dgk_concurrent.cpp  ben_dgk_mt.cpp  dgk.cpp  dgk.h
test/: CMakeLists.txt  double_packing.cpp  fast_decryption.cpp  test_GMM.cpp  test_applyLin.cpp  test_coefficient_extract.cpp  test_frob.cpp  test_general_double_packing.cpp  test_mapping_G.cpp  test_mult_in_slots.cpp  test_multithread_server.cpp  test_net_io.cpp  trial_error.cpp
