cmake_minimum_required(VERSION 3.2)
project(CryptGMM)
set(CMAKE_CXX_STANDARD 11)
set(NTL_HEADER /usr/local/include)
set(NTL_LIB /usr/local/lib)
set(HELIB_HEADER HElib/include)
include_directories(include ${HELIB_HEADER} ${NTL_HEADER})
add_subdirectory(HElib)
link_directories(${NTL_LIB})
add_subdirectory(src)
# enable_testing()
#find_package(GTest REQUIRED)
add_subdirectory(test)
