cmake_minimum_required(VERSION 3.2)
project(CryptGMM)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(NTL_HEADER /home/riku/include)
set(NTL_LIB /home/riku/lib)
set(HELIB_HEADER HElib/include)
include_directories(include ${HELIB_HEADER} ${NTL_HEADER})
add_subdirectory(HElib)
link_directories(${NTL_LIB})
add_subdirectory(src)
add_subdirectory(test)
